# GenAI-Chitter-Chat

./: README.md  app.py  pyproject.toml  requirements.txt
graph/: builder.py  nodes.py  state.py
intent/: router.py
llm/: client.py
rag/: document_loader.py  local_vectorstore.py  qa.py  vectorstore.py
